# polars_excel_writer

./: .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE_Apache2.0  LICENSE_MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: rust_clippy.yml
examples/: Readme.md  doc_enable_column_formulas01.rs  doc_enable_column_formulas02.rs  doc_enable_column_urls.rs  doc_write_excel_add_worksheet.rs  doc_write_excel_autofit.rs  doc_write_excel_chart.rs  doc_write_excel_combined.rs  doc_write_excel_date_format.rs  doc_write_excel_datetime_format.rs  doc_write_excel_float_format.rs  doc_write_excel_float_precision.rs  doc_write_excel_intro.rs  doc_write_excel_null_values.rs  doc_write_excel_save_to_buffer.rs  doc_write_excel_save_to_writer.rs  doc_write_excel_set_column_format.rs  doc_write_excel_set_freeze_panes.rs  doc_write_excel_set_freeze_panes_top_cell.rs  doc_write_excel_set_header.rs  doc_write_excel_set_header_format.rs  doc_write_excel_set_nan_value.rs  doc_write_excel_set_screen_gridlines.rs  doc_write_excel_set_table.rs  doc_write_excel_set_worksheet_name.rs  doc_write_excel_set_zoom.rs  doc_write_excel_time_format.rs  doc_write_excel_worksheet.rs  doc_write_excel_write_dataframe.rs  doc_write_excel_write_dataframe_to_cell.rs  excelwriter_autofit.rs  excelwriter_date_format.rs  excelwriter_datetime_format.rs  excelwriter_float_format.rs  excelwriter_float_precision.rs  excelwriter_has_header_off.rs  excelwriter_has_header_on.rs  excelwriter_intro.rs  excelwriter_null_values.rs  excelwriter_time_format.rs  (+28 more)
src/: changelog.rs  excel_writer.rs  lib.rs  polars_comparison.rs  write.rs  xlsx_writer.rs
tests/input/: dataframe01.xlsx  dataframe02.xlsx  dataframe03.xlsx  dataframe04.xlsx  dataframe05.xlsx  dataframe06.xlsx  dataframe07.xlsx  dataframe08.xlsx  dataframe09.xlsx  dataframe10.xlsx  dataframe11.xlsx  dataframe12.xlsx  dataframe13.xlsx  dataframe14.xlsx  dataframe15.xlsx  dataframe16.xlsx  dataframe17.xlsx  dataframe18.xlsx  dataframe19.xlsx  dataframe20.xlsx  dataframe21.xlsx  dataframe22.xlsx  dataframe23.xlsx
tests/integration/: dataframe01.rs  dataframe02.rs  dataframe03.rs  dataframe04.rs  dataframe05.rs  dataframe06.rs  dataframe07.rs  dataframe08.rs  dataframe09.rs  dataframe10.rs  dataframe11.rs  dataframe12.rs  dataframe13.rs  dataframe14.rs  dataframe15.rs  dataframe16.rs  dataframe17.rs  dataframe18.rs  dataframe19.rs  dataframe20.rs  dataframe21.rs  dataframe22.rs  dataframe23.rs  main.rs
tests/integration/common/: mod.rs
