[package]
name = "polars_excel_writer"
description = "A Polars extension to serialize dataframes to Excel xlsx files"
authors = ["John McNamara <jmcnamara@cpan.org>"]
repository = "https://github.com/jmcnamara/polars_excel_writer"
keywords = ["polars", "excel", "xlsx"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.15.0"
edition = "2021"


[dependencies]
chrono = "0.4.39"
polars = {version = "0.48.1", features = ["lazy"]}
polars-arrow = {version = "0.48.1"}
rust_xlsxwriter = {version = "0.88", features = ["chrono", "polars"]}


[dev-dependencies]
zip = {version = "2.2.2", default-features = false, features = ["deflate"]}
regex = "1.11.1"
pretty_assertions = "1.4.1"

[features]
# `default`: Includes all the standard functionality.
default = []

# `zlib`: Adds dependency on zlib and a C compiler. This includes the same
#  features as `default` but is 1.5x faster for large files.
zlib = ["zip/deflate-zlib"]

[package.metadata.commands]
# Some local package management and release check commands.
# Uses Cargo Commander.

spellcheck = {cmd = [
    "for f in src/*.rs; do aspell --lang=en_US --check $f; done",
    "for f in examples/*.rs; do aspell --lang=en_US --check $f; done",
    "aspell --lang=en_US --check README.md"
]}
